--- a/Timeclock/Info.plist
+++ b/Timeclock/Info.plist
@@ -19,7 +19,21 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>101</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>ff5d01abe12285227f838bccf0c1cf896a6fcdd9</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
