--- a/Timeclock/Info.plist
+++ b/Timeclock/Info.plist
@@ -18,8 +18,19 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.kairos.kairostimeclock</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>timeclock</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
-	<string>101</string>
+	<string>121</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
@@ -55,10 +66,10 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>To verify your identity</string>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>To verify your location</string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
